верстает header и главную страницу в десктоп масштабе

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,5 @@
-h1 {
-  color: red;
-}
+@import "base.scss";
+@import "visually-hidden.scss";
+@import "variables.scss";
+@import "./blocks/page-header.scss";
+@import "./blocks/intro.scss";
