верстает модальной окно формы обратной связи в десктоп разрешении без валидации и скрипта

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,3 +3,5 @@
 @import "variables.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/intro.scss";
+@import "./blocks/modal-order-callback.scss";
+@import "./blocks/modal-position.scss";
