--- a/source/sass/blocks/modal-order-callback.scss
+++ b/source/sass/blocks/modal-order-callback.scss
@@ -1,4 +1,5 @@
 .modal-order-callback {
+  display: none;
   position: relative;
   margin: 0 auto;
   padding-top: 56px;
@@ -9,6 +10,7 @@
   width: 480px;
   box-sizing: border-box;
   border-radius: 8px;
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.1);
 }
 
 .modal-order-callback__title {
@@ -50,6 +52,11 @@
   box-sizing: border-box;
   border-radius: 80px;
 
+  &:focus {
+    border-color: #ffd701;
+  // TODO: тут нужно будет поставить градиент на бордер
+  }
+
   &:first-of-type {
     margin-bottom: 8px;
   }
@@ -69,28 +76,9 @@
 }
 
 .modal-order-callback__form button[type="submit"] {
-  display: block;
-  padding: 19px 63px;
   margin-left: 59px;
   margin-bottom: 17px;
-  border: none;
-  border-radius: 80px;
-  background: linear-gradient(108.42deg, #ffc341 20.46%, #ffd701 65.31%);
-  font-family: "Fira Sans", "Arial", sans-serif;
-  font-size: 17px;
-  line-height: 20px;
-  text-transform: lowercase;
-  color: #ffffff;
-  cursor: pointer;
-
-  &:hover {
-    background: linear-gradient(143.55deg, #ffc341 50.3%, #ffd701 63.1%);
-  }
-
-  &:active {
-    background: radial-gradient(150% 119.49% at 50% 50.85%, rgba(0, 0, 0, 0) 30.67%, rgba(3, 3, 3, 0.24) 100%),
-                linear-gradient(143.55deg, #FFC341 -50.3%, #FFD701 63.1%);
-  }
+  padding: 19px 63px;
 }
 
 .modal-order-callback__form label {
@@ -108,11 +96,14 @@
 
 .modal-order-callback__checkbox {
   position: absolute;
-  visibility: hidden;
-  cursor: pointer;
+  left: -9999px;
 
   &:checked + .modal-order-callback__custom-checkbox {
     background-color: #fffd00;
+  }
+
+  &:focus + .modal-order-callback__custom-checkbox {
+    border: 1px solid blue;
   }
 }
 
@@ -142,7 +133,7 @@
   cursor: pointer;
 
   &:hover {
-    opacity: 0.8;
+    transform: scale(1.1);
   }
 
   &:active {
