--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,9 @@
 @import "base.scss";
 @import "visually-hidden.scss";
 @import "variables.scss";
+@import "./blocks/btn.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/intro.scss";
 @import "./blocks/modal-order-callback.scss";
+@import "./blocks/modal-success.scss";
 @import "./blocks/modal-position.scss";
