--- a/source/sass/blocks/modal-success.scss
+++ b/source/sass/blocks/modal-success.scss
@@ -1,6 +1,6 @@
 .modal-success {
-  display: none;
   position: relative;
+  display: none;
   margin: 0 auto;
   padding-top: 116px;
   padding-bottom: 113px;
@@ -10,7 +10,7 @@
   width: 480px;
   box-sizing: border-box;
   border-radius: 8px;
-  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.1);
 }
 
 .modal-success span {
@@ -51,6 +51,5 @@
 .modal-success button[type="button"] {
   margin-left: 48px;
   padding: 19px 98px;
-
 }
 
