--- a/source/sass/blocks/modal-position.scss
+++ b/source/sass/blocks/modal-position.scss
@@ -15,3 +15,14 @@
 .modal-open {
   display: block;
 }
+
+@media (max-width: $tab-width) {
+  .modal-position {
+    padding: 0;
+    background-color: #ffffff;
+  }
+
+  .modal-open {
+    display: block;
+  }
+}
