--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -135,3 +135,61 @@
 //    width: 350px;
 //  }
 //}
+
+.intro-header-wrapper {
+  background-image: url('../../img/background_top_desktop@1x.jpg');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+  height: 879px;
+  background-color: #c3886a;
+  color: #ffffff;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../../img/background_top_desktop@2x.jpg");
+  }
+}
+
+.intro {
+  background: url("../../img/girl_desktop@1x.png") 50% -100px no-repeat,
+              url("../../img/israel_desktop@1x.png") 50% 60px no-repeat;
+  height: 811px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background: url("../../img/girl_desktop@2x.png") 50% -100px no-repeat,
+                url("../../img/israel_desktop@2x.png") 50% 60px no-repeat;
+    background-size: 1366px 906px,
+                     1018px 340px;
+  }
+}
+
+.intro h2 {
+  position: relative;
+  margin: 0 auto;
+  padding: 0;
+  font-family: "Fira Sans", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+  text-align: center;
+  max-width: 350px;
+  transform: translateY(439px);
+  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
+}
+
+.intro span {
+  position: relative;
+  margin: 0 auto;
+  display: block;
+  background-image: url("../../img/hint_scroll_down_mobile@1x.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: 76px;
+  height: 132px;
+  transform: translateY(470px);
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../../img/hint_scroll_down_mobile@2x.png");
+  }
+}
