--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,6 +1,7 @@
 .page-header__wrapper {
   position: relative;
   padding-top: 32px;
+  padding-bottom: 32px;
   padding-left: 110px;
   padding-right: 114px;
 }
