--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,149 +1,11 @@
-//@media (min-width: 320px) {
-//  .intro {
-//    box-sizing: border-box;
-//    margin-top: -35px;
-//    background-image: url("../../img/background_top_mobile@1x.jpg");
-//    background-repeat: no-repeat;
-//    background-position: 50% 50%;
-//    background-size: cover;
-//    background-color: #c3886a;
-//    color: #ffffff;
-//    width: 100%;
-//    height: 587px;
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/background_top_mobile@2x.jpg");
-//    }
-//  }
-//
-//  .intro__israel {
-//    position: relative;
-//    background-image: url("../../img/israel_mobile@1x.png");
-//    background-repeat: no-repeat;
-//    background-position: 50% 50%;
-//    background-size: cover;
-//    width: 100%;
-//    height: 122px;
-//    transform: translateY(136px);
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/israel_mobile@2x.png");
-//    }
-//  }
-//
-//  .intro__girl {
-//    position: relative;
-//    margin-top: -121px;
-//    background-image: url("../../img/girl_mobile@1x.png");
-//    background-repeat: no-repeat;
-//    background-position: 50% 50%;
-//    background-size: contain;
-//    width: 100%;
-//    height: 603px;
-//    z-index: 10;
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/girl_mobile@2x.png");
-//    }
-//  }
-//
-//  .intro h2 {
-//    position: relative;
-//    margin: 0 auto;
-//    margin-top: -301px;
-//    margin-bottom: 31px;
-//    padding: 0;
-//    font-family: "Fira Sans", "Arial", sans-serif;
-//    font-size: 20px;
-//    line-height: 24px;
-//    color: #ffffff;
-//    text-align: center;
-//    max-width: 350px;
-//    z-index: 100;
-//  }
-//
-//  .intro span {
-//    position: relative;
-//    margin: 0 auto;
-//    display: block;
-//    background-image: url("../../img/hint_scroll_down_mobile@1x.png");
-//    background-repeat: no-repeat;
-//    background-position: center center;
-//    background-size: cover;
-//    width: 76px;
-//    height: 132px;
-//    z-index: 100;
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/hint_scroll_down_mobile@2x.png");
-//    }
-//  }
-//}
-//
-//@media (min-width: 768px) {
-//  .intro {
-//    margin-top: -67px;
-//    background-image: url("../../img/background_top_desktop@1x.jpg");
-//    height: 879px;
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/background_top_desktop@2x.jpg");
-//    }
-//  }
-//
-//  .intro__israel {
-//    height: 220px;
-//  }
-//
-//  .intro__girl {
-//    margin-top: -107px;
-//    height: 750px;
-//    background-position: 52% 50%;
-//  }
-//}
-//
-//
-//@media (min-width: 1024px) {
-//  .intro__israel {
-//    background-image: url("../../img/israel_desktop@1x.png");
-//    background-size: contain;
-//    height: 340px;
-//    transform: translateY(160px);
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/israel_desktop@2x.png");
-//    }
-//  }
-//
-//  .intro__girl {
-//    margin-top: -340px;
-//    background-image: url("../../img/girl_desktop@1x.png");
-//    background-size: cover;
-//    width: 100%;
-//    height: 906px;
-//
-//    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-//      background-image: url("../../img/girl_desktop@2x.png");
-//    }
-//  }
-//
-//  .intro h2 {
-//    margin-top: -367px;
-//    margin-bottom: 31px;
-//    font-size: 24px;
-//    line-height: 29px;
-//    width: 350px;
-//  }
-//}
-
 .intro-header-wrapper {
-  background-image: url('../../img/background_top_desktop@1x.jpg');
+  background-image: url("../../img/background_top_desktop@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
   height: 879px;
-  background-color: #c3886a;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../../img/background_top_desktop@2x.jpg");
@@ -151,16 +13,28 @@
 }
 
 .intro {
-  background: url("../../img/girl_desktop@1x.png") 50% -100px no-repeat,
-              url("../../img/israel_desktop@1x.png") 50% 60px no-repeat;
+  background: url("../../img/hint_scroll_down_desktop@1x.png") 50% 528px no-repeat,
+    url("../../img/girl_desktop@1x.png") 50% -100px no-repeat,
+    url("../../img/israel_desktop@1x.png") 50% 60px no-repeat;
   height: 811px;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background: url("../../img/girl_desktop@2x.png") 50% -100px no-repeat,
-                url("../../img/israel_desktop@2x.png") 50% 60px no-repeat;
-    background-size: 1366px 906px,
-                     1018px 340px;
+    background: url("../../img/hint_scroll_down_desktop@1x.png") 50% 528px no-repeat,
+      url("../../img/girl_desktop@2x.png") 50% -100px no-repeat,
+      url("../../img/israel_desktop@2x.png") 50% 60px no-repeat;
+    background-size: 77px 132px,
+      1366px 906px,
+      1018px 340px;
   }
+}
+
+.intro__reserve-pic {
+  display: none;
+  margin: 0 auto;
+  width: 998px;
+  height: 147px;
+  transform: translateY(-36px);
+  //TODO: непонятно как сверстать в мобильном разрешении, картинка нужна другая, а использование тега picture не допускается
 }
 
 .intro h2 {
@@ -177,19 +51,39 @@
   text-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
 }
 
-.intro span {
-  position: relative;
-  margin: 0 auto;
-  display: block;
-  background-image: url("../../img/hint_scroll_down_mobile@1x.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  width: 76px;
-  height: 132px;
-  transform: translateY(470px);
+@media (max-width: $mob-width) {
+  .intro-header-wrapper {
+    background-image: url("../../img/background_top_mobile@1x.png");
+    background-repeat: no-repeat;
+    background-position: 50% 32px;
+    background-size: cover;
+    height: 587px;
 
-  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../../img/hint_scroll_down_mobile@2x.png");
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../../img/background_top_mobile@2x.png");
+    }
+  }
+
+  .intro {
+    background: url("../../img/hint_scroll_down_mobile@1x.png") 50% 319px no-repeat,
+      url("../../img/girl_mobile@1x.png") 50% -64px no-repeat,
+      url("../../img/israel_mobile@1x.png") 50% 72px no-repeat;
+    height: 434px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background: url("../../img/girl_mobile@2x.png") 50% -63px no-repeat,
+      url("../../img/israel_mobile@2x.png") 50% 72px no-repeat;
+      background-size: 320px 602px,
+      320px 122px;
+    }
+  }
+
+  .intro h2 {
+    margin: 0 auto;
+    padding: 0;
+    font-size: 20px;
+    line-height: 24px;
+    transform: translateY(239px);
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
   }
 }
