верстает секцию 'о программе' во всех разрешениях

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -71,10 +71,12 @@
     height: 434px;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background: url("../../img/girl_mobile@2x.png") 50% -63px no-repeat,
-      url("../../img/israel_mobile@2x.png") 50% 72px no-repeat;
-      background-size: 320px 602px,
-      320px 122px;
+      background: url("../../img/hint_scroll_down_mobile@1x.png") 50% 319px no-repeat,
+        url("../../img/girl_mobile@2x.png") 50% -63px no-repeat,
+        url("../../img/israel_mobile@2x.png") 50% 72px no-repeat;
+      background-size: 76px 132px,
+        320px 602px,
+        320px 122px;
     }
   }
 
