--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,4 @@
 @import "./blocks/modal-order-callback.scss";
 @import "./blocks/modal-success.scss";
 @import "./blocks/modal-position.scss";
+@import "./blocks/about.scss";
