--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,4 @@
 @import "./blocks/modal-success.scss";
 @import "./blocks/modal-position.scss";
 @import "./blocks/about.scss";
+@import "./blocks/programms.scss";
