--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,4 @@
 @import "./blocks/modal-position.scss";
 @import "./blocks/about.scss";
 @import "./blocks/programms.scss";
+@import "./blocks/want-go.scss";
