верстает 'секцию как поехать' во всех разрешениях

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,4 @@
 @import "./blocks/about.scss";
 @import "./blocks/programms.scss";
 @import "./blocks/want-go.scss";
+@import "./blocks/how-go.scss";
