верстает черновую версию секции masa israel

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,5 @@
 @import "./blocks/programms.scss";
 @import "./blocks/want-go.scss";
 @import "./blocks/how-go.scss";
+@import "./blocks/live-israel.scss";
+@import "./blocks/masa-photo.scss";
