--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,4 @@
 @import "./blocks/how-go.scss";
 @import "./blocks/live-israel.scss";
 @import "./blocks/masa-photo.scss";
+@import "./blocks/faq.scss";
