--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -16,7 +16,7 @@
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../../img/faq_img_desktop@2x.png"),
-    url("../../img/bag_desktop@2x.png"),
+      url("../../img/bag_desktop@2x.png"),
       url("../../img/faq_bg_desktop@2x.jpg");
     background-size: 645px 803px,
       194px 177px,
@@ -110,6 +110,7 @@
 
 .faq__question--active h3 {
   margin-bottom: 25px;
+
   &::after {
     background: url("../../img/arrow_up.svg") no-repeat 0 0;
   }
@@ -233,7 +234,7 @@
 
   .faq__question--fifth {
     padding-bottom: 15px;
-  };
+  }
 
   .faq__question--sixth {
     padding-bottom: 16px;
