--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,5 @@
 @import "./blocks/live-israel.scss";
 @import "./blocks/masa-photo.scss";
 @import "./blocks/faq.scss";
+@import "./blocks/review.scss";
+
