--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,4 +15,4 @@
 @import "./blocks/masa-photo.scss";
 @import "./blocks/faq.scss";
 @import "./blocks/review.scss";
-
+@import "./blocks/details.scss";
