верстает футер во всех разрешениях

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,4 @@
 @import "./blocks/faq.scss";
 @import "./blocks/review.scss";
 @import "./blocks/details.scss";
+@import "./blocks/page-footer.scss";
