--- a/source/sass/blocks/want-go.scss
+++ b/source/sass/blocks/want-go.scss
@@ -82,7 +82,7 @@
   font-variant: small-caps;
 }
 
-.want-go button {
+.want-go__callback-button {
   padding: 20px 38px;
   transform: translateX(-216px);
 }
@@ -138,7 +138,7 @@
     max-width: 450px;
   }
 
-  .want-go button {
+  .want-go__callback-button {
     margin-left: 11px;
     padding: 20px 62px;
     transform: translateX(0);
