--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -16,7 +16,7 @@
     background-image: url("../../img/reviews_sketch_desktop@2x.png"),
       url("../../img/reviews__bg_watercolor@2x.png");
     background-size: 535px 318px,
-      1259px, 600px;
+      1259px;
   }
 }
 
